# NovaSystem-Codex

./: .codacy.yml  .env.example  .gitignore  .pre-commit-README.md  .pre-commit-config.yaml  BUG_REPORT_2025-12-07.md  BUG_REPORT_2025-12-07_UPDATE.md  CHANGELOG.md  CLAUDE.md  DECISION_MATRIX_QUICK_REFERENCE.md  DECISION_MATRIX_README.md  DECISION_MATRIX_SUMMARY.md  DECISION_MATRIX_TEST_REPORT.md  GOALS.md  README.md  decision_matrix_test_report_20251128_184133.json  demo.py  freedom_turnint_point.txt  gemini_image_demo.py  nova  novasystem_demo.py  novasystem_interactive.py  pyproject.toml  test_decision_matrix_report.py
NovaSystem-Streamlined/: .env.example  .gitignore  comprehensive_claude_test.py  docker-compose.prod.yml  env.template  kill_stuck_sessions.py  pyproject.toml  requirements.txt  run_api.sh  test_anthropic_sessions.py  test_comprehensive.py  test_fixed_logic.py  test_report_20250927_150432.json  test_simple.py  test_web_interfaces.py
NovaSystem-Streamlined/data/sessions/: session_20250926_134935_72e3c64b.md  session_20250926_143847_b1c48a26.md  session_20251206_173144_8085434a.md  session_20251206_184513_f8a454c7.md
NovaSystem-Streamlined/devlog/: decision_matrix_polish_2025-11-28.md  default_model_update_2025-09-26.md  gui_chat_fix_2025-09-27.md  responsive_design_enhancement_2025-09-27.md  retro_ui_enhanced_gradio_2025-09-27.md  timestamp_hydration_fix_2025-09-27.md  ui_ux_enhancement_completion_2025-09-28.md  unified_navigation_2025-09-27.md  v3_planning_2025-09-27.md
NovaSystem-Streamlined/examples/: chat_demo.py  image_generation_demo.py  market_research_agent.py  streaming_example.py  thinking_demo.py  tools_demo.py  vision_demo.py
NovaSystem-Streamlined/novasystem/: __init__.py  __main__.py  cli.py
NovaSystem-Streamlined/novasystem/api/: rest.py
NovaSystem-Streamlined/novasystem/cli/: __init__.py  main.py
NovaSystem-Streamlined/novasystem/config/: __init__.py
NovaSystem-Streamlined/novasystem/core/: __init__.py  agents.py  process.py
NovaSystem-Streamlined/novasystem/mcp/: server.py
NovaSystem-Streamlined/novasystem/session/: models.py
NovaSystem-Streamlined/novasystem/ui/: gradio.py
NovaSystem-Streamlined/novasystem/utils/: __init__.py  chat_service.py  colors.py  image_service.py  llm_service.py  model_cache.py  prompt_builder.py
NovaSystem-Streamlined/novasystem_modern_ui/: README.md  WORKFLOW_SYSTEM.md
NovaSystem-Streamlined/novasystem_modern_ui/.next/: build-manifest.json
NovaSystem-Streamlined/novasystem_modern_ui/.next/server/: server-reference-manifest.js  server-reference-manifest.json
NovaSystem-Streamlined/novasystem_modern_ui/.next/server/chunks/: [root-of-the-server]__50c42caf._.js
NovaSystem-Streamlined/novasystem_modern_ui/.next/server/pages/: _app.js  _document.js  _error.js
NovaSystem-Streamlined/novasystem_modern_ui/.next/static/chunks/: 48b4b_ui_src_components_workflow_WorkflowCanvas_WorkflowCanvas_module_css_bad6b30c._.single.css.map  NovaSystem-Streamlined_novasystem_modern_ui_a0ff3932._.js  NovaSystem-Streamlined_novasystem_modern_ui_pages__app_2da965e7._.js  NovaSystem-Streamlined_novasystem_modern_ui_pages__error_2da965e7._.js  NovaSystem-Streamlined_novasystem_modern_ui_src_4c328941._.js.map  NovaSystem-Streamlined_novasystem_modern_ui_src_4cf52740._.js.map  NovaSystem-Streamlined_novasystem_modern_ui_src_app_layout_tsx_85caa71c._.js  NovaSystem-Streamlined_novasystem_modern_ui_src_components_workflow_bed988a8._.css  NovaSystem-Streamlined_novasystem_modern_ui_src_components_workflow_bed988a8._.css.map  NovaSystem-Streamlined_novasystem_modern_ui_src_styles_globals_css_bad6b30c._.single.css.map  [next]_entry_page-loader_ts_03924351._.js  [next]_entry_page-loader_ts_f84b57f8._.js  [turbopack]_browser_dev_hmr-client_hmr-client_ts_6d78f6b3._.js  b9f81_9a7bf2b5._.js  b9f81_d3098a64._.js  b9f81_d3098a64._.js.map  b9f81_next_a9bfc363._.js.map  b9f81_next_dist_28d0fb0f._.js  b9f81_next_dist_8e7d35b9._.js.map  b9f81_next_dist_client_09db55bc._.js  b9f81_next_dist_client_a33daa61._.js.map  b9f81_next_dist_compiled_193a1c7d._.js.map  b9f81_next_dist_compiled_e3cfb0b0._.js.map  b9f81_next_dist_compiled_react-dom_f9c18274._.js.map  b9f81_next_dist_d0aba2f8._.js.map  b9f81_next_dist_shared_lib_0e0c0934._.js  b9f81_next_dist_shared_lib_0e0c0934._.js.map  b9f81_react-dom_03f577ea._.js  (+2 more)
NovaSystem-Streamlined/novasystem_modern_ui/.next/types/: routes.d.ts
NovaSystem-Streamlined/novasystem_modern_ui/src/app/: layout.tsx  page.tsx
NovaSystem-Streamlined/novasystem_modern_ui/src/app/help/: page.tsx
NovaSystem-Streamlined/novasystem_modern_ui/src/components/: ResponsiveTest.tsx
NovaSystem-Streamlined/novasystem_modern_ui/src/hooks/: useWorkflowPolling.ts
NovaSystem-Streamlined/novasystem_modern_ui/src/lib/: utils.ts
NovaSystem-Streamlined/novasystem_modern_ui/src/services/: workflowApi.ts
NovaSystem-Streamlined/novasystem_modern_ui/src/styles/: globals.css
NovaSystem-Streamlined/templates/: analytics.html  help.html  history.html
NovaSystem-Streamlined/templates/shared/: navigation.js
NovaSystem-Streamlined/work_efforts/00-09_project_management/00_maintenance/: 00.00_index.md  00.01_default_model_configuration.md  00.03_session_management_system.md  00.05_ui_ux_refinement_summary.md  00.06_mcp_server_implementation.md  00.09_workflow_backend_integration.md  00.11_unified_navigation_system.md  00.14_css_unification.md  00.15_responsive_design_enhancement.md
(+480 files in other folders)
