[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "novasystem"
version = "0.4.0a1"
description = "An agentic framework, built one piece at a time."
readme = "README.md"
authors = [
    {name = "NovaSystem Team"}
]
requires-python = ">=3.10"
license = {text = "GPL-3.0"}
keywords = ["ai", "agent", "llm", "framework"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "anthropic>=0.94.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
nova = "novasystem.bot:main"

[project.urls]
Homepage = "https://github.com/ctavolazzi/NovaSystem"
Repository = "https://github.com/ctavolazzi/NovaSystem"
Issues = "https://github.com/ctavolazzi/NovaSystem/issues"

[tool.setuptools]
packages = ["novasystem"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
