[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "novasystem"
version = "2.0.0"
description = "NovaSystem - Unified Multi-Agent Problem-Solving Framework"
readme = "README.md"
authors = [
    {name = "NovaSystem Team"}
]
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "ollama>=0.1.0",
    "gradio>=4.0.0",
    "flask>=2.3.0",
    "docker>=6.0.0",
    "gitpython>=3.1.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "websockets>=11.0.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "tqdm>=4.65.0",
    "requests>=2.31.0",
]

[project.scripts]
novasystem = "novasystem.cli:main"
novasystem-web = "novasystem.ui.web:main"
novasystem-gradio = "novasystem.ui.gradio:main"

[tool.setuptools]
packages = ["novasystem"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88
